# python-project-template

./: README.md  pyproject.toml
src/: main.py
